@@ -36,5 +36,5 @@ Fl_Check_Button::Fl_Check_Button(int X, int Y, int W, int H, const char *l)
 : Fl_Light_Button(X, Y, W, H, l) {
   box(FL_NO_BOX);
   down_box(FL_DOWN_BOX);
-  selection_color(FL_BLACK);
+  selection_color(FL_SELECTION_COLOR);
 }
